# sg-sprite

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  dbg  lay-format.md  rel  tests.sh
src/: dep.rs  draw.rs  lib.rs  main.rs  parse.rs  util.rs
tests/: regression.rs
