[package]
name = "sg-sprite"
version = "0.2.1"
authors = ["mfgm2"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "0.1.0"
custom_error = "1.7"
structopt = "0.3.0"
byteorder = "1.3.2"
hex = "0.3.2"

[dependencies.image]
version = "0.22.2"
default-features = false
features = ["png_codec"]

