[package]
name = "sg-sprite"
version = "0.2.3"
authors = ["mfgm2"]
edition = "2018"

description = "Application for restoring Mages engine sprites (Steins;Gate, Steins;Gate 0, Chaos;Child)"
license = "Apache-2.0"
repository = "https://github.com/AbsurdlySuspicious/sg-sprite"
keywords = ["visual-novel", "games", "binary-format", "unpacker", "decoder"]
readme = "README.md"

[dependencies]
libflate = "0.1.0"
custom_error = "1.7"
structopt = "0.3.0"
byteorder = "1.3.2"
hex = "0.3.2"

[dev-dependencies]
sha2 = "0.9.1"
data-encoding = "2.3"

[dependencies.image]
version = "0.23.6"
default-features = false
features = ["png"]

