[package]
name = "sg-sprite"
version = "0.3.2"
authors = ["AbsurdlySuspicious <repom2@airmail.cc>"]
edition = "2018"

description = "Application for restoring Mages engine sprites (Steins;Gate, Steins;Gate 0, Chaos;Child)"
license = "Apache-2.0"
repository = "https://github.com/AbsurdlySuspicious/sg-sprite"
keywords = ["visual-novel", "games", "binary-format", "unpacker", "decoder"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
lazy_format = "2.0.3"
libflate = "0.1.0" # TODO: add compressed C;C layouts to tests before updating to 2.x
clap = { version = "4.5.30", features = ["derive"] }
byteorder = "1.3.2"

[dev-dependencies]
sha2 = "0.10.8"
data-encoding = "2.3"

[dependencies.image]
version = "0.23.6"
default-features = false
features = ["png"]

